# CoreML-DOLPHIN3.0

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  AGENTS.md  Cargo.toml  Codex_Master_Task_Results.md  Package.swift  README.md  ROADMAP.md  compliance_scanner.py  dolphin2coreml_full.py  dolphin_quantization.py  eslint.config.js  jest.config.cjs  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  tree_balance.py  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  quantization-sweep.yml
Sources/: AGENTS.md
Tests/DolphinCoreMLRuntimeTests/: ComputeUnitSelectionTests.swift  KVCacheTests.swift  MetadataTests.swift
benchmarks/: parallel_csv.json
docs/: AGENTS.md  ROADMAP.md  documentation_manifest.json
docs/architecture/: e_commerce_platform_architecture.md
docs/history/: AGENTS.md  SESSION_LOG.md
docs/templates/: AGENTS.md  session_log.md  session_notes.md
js-tests/: packageConfig.test.ts
quantization/: __init__.py  helpers.py  math_utils.py
scripts/: run-vitest.mjs
tasks/: AGENTS.md  SESSION_NOTES.md  __init__.py  sweep_guard.py
tasks/artificial_intelligence/: __init__.py  embedding_compare.py  pipeline_validation.py  quantization_study.py  regression_guard.py
tasks/code_quality_refactoring/: batchFetch.ts  lazy_pipeline.py  processItems.ts
tasks/core_algorithmic_foundations/: __init__.py  balanced_binary_tree.py  graph_shortest_path.py  knapsack_optimizer.py  longest_palindromic_substring.py  trie_autocomplete.py
tasks/core_algorithmic_foundations/parallel_csv_reader/: Cargo.toml
tasks/core_algorithmic_foundations/parallel_csv_reader/benches/: parallel_csv.rs
tasks/core_algorithmic_foundations/parallel_csv_reader/src/: lib.rs
tasks/core_algorithmic_foundations/session_model/: Cargo.toml
tasks/core_algorithmic_foundations/session_model/src/: lib.rs
tasks/data_quality/: validation.py
tasks/documentation/: diagram_renderer.py  docstring_rewriter.py  flask_app.py  jsdoc_enricher.ts
tasks/mobile_security/: AGENTS.md
tasks/multi_language_cross_integration/: __init__.py  fibonacci.py  fibonacci.ts
tasks/multi_language_cross_integration/libmath/: CMakeLists.txt  libmath.cpp
tasks/multi_language_cross_integration/wasm_dot/: Cargo.toml
tasks/multi_language_cross_integration/wasm_dot/src/: lib.rs
tasks/systems_backend_engineering/: Dockerfile  __init__.py  dashboard.py  deployment.yaml  fastapi_cache.py  graphqlResolvers.ts  jwtMiddleware.ts  metrics_app.py  requirements.txt
tests/: test_benchmark_csv_support.py  test_compliance_scanner.py  test_dolphin2coreml_full.py  test_model_metadata.py  test_quantization.py  test_quantization_integration.py  test_sweep_guard.py  test_tasks.py  test_validation_config.py
tests/artificial_intelligence/: test_embedding_compare.py  test_pipeline_validation.py  test_quantization_study.py  test_regression_guard.py
tests/code_quality_refactoring/: test_lazy_pipeline.py
tests/core_algorithmic_foundations/: test_balanced_binary_tree.py  test_graph_shortest_path.py  test_knapsack_optimizer.py  test_longest_palindromic_substring.py  test_tree_balance_cli.py  test_trie_autocomplete.py
tests/data_quality/: test_validation.py
tests/devops/: test_ansible_patch_management.py  test_gitops_manifest.py  test_terraform_multi_region.py
tests/documentation/: test_diagram_renderer.py  test_docstring_rewriter.py  test_flask_app.py
tests/multi_language_cross_integration/: test_fibonacci.py  test_libmath_binding.py  test_rust_swift_bridge.py
tests/systems_backend_engineering/: test_dashboard.py  test_deployment_manifest.py  test_fastapi_cache.py  test_metrics_app.py
tests/tools/: test_session_finalize.py
tests_ts/: fibonacci.test.ts
tests_ts/react/: PriceTag.test.tsx
tools/: AGENTS.md  __init__.py  manage_agents.py  session_finalize.py
(+40 files in other folders)
