[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coreml-dolphin"
version = "0.2.0"
description = "Core ML conversion pipeline for Dolphin3.0-Llama3.1-8B."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CoreML Dolphin Maintainers" }]
license = "LicenseRef-Proprietary"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/CoreML-DOLPHIN"

[tool.setuptools]
py-modules = ["dolphin2coreml_full"]
