[package]
name = "session_model"
version = "0.1.0"
edition = "2021"
description = "Session lifecycle model with expiration helpers and serde compatibility."
authors = ["CoreML Dolphin Contributors"]
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0"
